--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,7 @@
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<ImageView android:id="@+id/text" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:text="@string/hello" />
+		android:layout_height="wrap_content" />
 	<ImageView android:id="@+id/text2" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:text="@string/hello" />
+		android:layout_height="wrap_content" />
 </LinearLayout>
