--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Attribute sets for custom widgets -->
 <resources>
- 
-     <!-- Attributes for WebImageView -->   
+
+    <!-- Attributes for com.madrobot.ui.widgets.WebImageView -->
     <declare-styleable name="WebImageView">
         <attr format="string" name="imageUrl" />
         <attr format="boolean" name="autoLoad" />
         <attr format="integer" name="progressDrawable" />
         <attr format="integer" name="errorDrawable" />
+    </declare-styleable>
+
+    <!-- Attributes for com.madrobot.ui.widgets.HorizontalScrollView -->
+    <declare-styleable name="HorizontalScrollView">
+        <attr format="dimension" name="pageWidth" />
+        <attr format="integer" name="snapVelocity" />
     </declare-styleable>
 
 </resources>
