--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Attribute sets for custom widgets DO NOT EDIT-->
+<!-- Attribute sets for custom widgets DO NOT EDIT -->
 <resources>
 
     <!-- Attributes for com.madrobot.ui.widgets.WebImageView -->
@@ -25,6 +25,15 @@
         <attr format="boolean" name="drawBottomDrawable" />
         <attr format="integer" name="selectorDrawable" />
         <attr format="boolean" name="drawSelector" />
+    </declare-styleable>
+
+    <!-- Attributes for com.madrobot.ui.widgets.ZoomableImageView -->
+    <declare-styleable name="ZoomableImageView">
+        <attr format="integer" name="maxZoomSteps" />
+        <attr format="boolean" name="doubleTapToZoom" />
+        <attr format="float" name="minMaxZoom" />
+        <attr format="float" name="pinchToZoomMinDistance" />
+        <attr format="integer" name="angleTolerant" />
     </declare-styleable>
 
 </resources>
