added new utils/widgets

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -27,14 +27,14 @@
         <attr format="boolean" name="drawSelector" />
     </declare-styleable>
 
-    <!-- Attributes for com.madrobot.ui.widgets.ZoomableImageView -->
+<!--     Attributes for com.madrobot.ui.widgets.ZoomableImageView
     <declare-styleable name="ZoomableImageView">
         <attr format="integer" name="maxZoomSteps" />
         <attr format="boolean" name="doubleTapToZoom" />
         <attr format="float" name="minMaxZoom" />
         <attr format="float" name="pinchToZoomMinDistance" />
         <attr format="integer" name="angleTolerant" />
-    </declare-styleable>
+    </declare-styleable> -->
 
     <!-- Attributes for com.madrobot.ui.widgets.SortableListView -->
     <declare-styleable name="SortableListView">
