--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,4 +6,5 @@
 		android:layout_height="wrap_content" />
 	<ImageView android:id="@+id/text2" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
+	<TextView android:layout_width="wrap_content" android:bufferType="spannable" android:layout_height="wrap_content" android:id="@+id/textText"/>
 </LinearLayout>
