--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	<ImageView android:id="@+id/text" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
-	<ImageView android:id="@+id/text2" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
-	<TextView android:layout_width="wrap_content" android:bufferType="spannable" android:layout_height="wrap_content" android:id="@+id/textText"/>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <ImageView
+        android:id="@+id/text"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
 </LinearLayout>
