--- a/oishii/OiSHii/res/layout/footer.xml
+++ b/oishii/OiSHii/res/layout/footer.xml
@@ -2,4 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="40dp"
-    android:background="#000000" />
+    android:background="#ffffff"
+    android:gravity="center_vertical"
+    android:orientation="vertical" />
