--- a/oishii/OiSHii/res/layout/login.xml
+++ b/oishii/OiSHii/res/layout/login.xml
@@ -4,9 +4,10 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <ImageView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:scaleType="fitXY"
+        android:src="@drawable/logo_top" />
 
 </LinearLayout>
