--- a/oishii/OiSHii/res/layout/login.xml
+++ b/oishii/OiSHii/res/layout/login.xml
@@ -10,4 +10,66 @@
         android:scaleType="fitXY"
         android:src="@drawable/logo_top" />
 
+    <LinearLayout
+        android:id="@+id/userPasswdLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:layout_marginTop="15dip"
+        android:background="@drawable/textbox_bkgd"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+
+        <EditText
+            android:id="@+id/username_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:background="@android:color/white"
+            android:hint="@string/username"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
+            android:tag="Username"
+            android:textColor="@color/text_color"
+            android:textColorHint="#A6A8AB"
+            android:textSize="17dip"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/dividerLine"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/username_edit"
+            android:background="#999999" />
+
+        <EditText
+            android:id="@+id/password_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:layout_below="@+id/dividerLine"
+            android:background="@android:color/white"
+            android:hint="@string/password"
+            android:imeOptions="actionGo"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp"
+            android:singleLine="true"
+            android:tag="Password"
+            android:textColor="@color/text_color"
+            android:textColorHint="#A6A8AB"
+            android:textSize="17dip"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <Button
+        style="@style/primary_btn"
+        android:layout_width="fill_parent"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:layout_marginTop="15dp"
+        android:text="@string/btn_login"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:textStyle="bold" />
+
 </LinearLayout>
