--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -9,4 +9,14 @@
         <item name="android:minWidth">110dip</item>
     </style>
 
+    <style name="primary_btn">
+        <item name="android:shadowColor">#19736A</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">0.8</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:background">@drawable/btn_primary</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
