--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -15,8 +15,9 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">0.8</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:background">@drawable/btn_primary</item>
+        <item name="android:background">@drawable/btn_primary_selector</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
-
 </resources>
