--- a/oishii/OiSHii/res/layout/header.xml
+++ b/oishii/OiSHii/res/layout/header.xml
@@ -21,6 +21,7 @@
             android:text="header title" />
 
         <ImageView
+            android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/oshii_image"
