--- a/oishii/OiSHii/res/layout/home.xml
+++ b/oishii/OiSHii/res/layout/home.xml
@@ -4,7 +4,7 @@
     android:background="@drawable/home_bg" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/todaysMenu"
         android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
