--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -20,4 +20,11 @@
         <item name="android:textSize">18dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="todaysmenu_text">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
