--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -6,11 +6,11 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:layout_width="100"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/btn_primary" />
+        android:src="@drawable/logo_top" />
 
     <TextView
         android:id="@+id/textView1"
@@ -21,6 +21,7 @@
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@+id/imageView1"
         android:layout_toLeftOf="@+id/imageView2"
+        
         android:text="Noodle Soupsdfsfsdf sfsdsdfsdfsd sdfsds" 
         android:singleLine="true"/>
 
