--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="85dp" >
+    android:layout_height="65dp" >
     <RelativeLayout
         android:id="@+id/bg"
         android:background="#ff0000"
@@ -11,9 +11,11 @@
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="100dp"
-            android:layout_height="85dp"
+            android:layout_height="65dp"
+            android:background="@drawable/loading"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/textView1"
@@ -21,7 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="15dp"
+            android:text="Text"
             android:layout_toLeftOf="@+id/imageView2"
             android:layout_toRightOf="@+id/imageView1"
             android:singleLine="true" />
