--- a/oishii/OiSHii/res/layout/oishiilistbase.xml
+++ b/oishii/OiSHii/res/layout/oishiilistbase.xml
@@ -3,41 +3,44 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <RelativeLayout
+     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/todays_bg" >
+        android:background="@drawable/todays_bg" > 
 
+          <!--   android:layout_alignParentTop="true"
+            android:layout_centerInParent="true" -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true" >
+            android:orientation="vertical" 
+             android:layout_alignParentTop="true"
+            android:layout_centerInParent="true">
 
             <TextView
                 android:id="@+id/titleFirst"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginRight="5dp"
-                android:text="Todays"
+                android:background="#00ff00"
                 android:textColor="@android:color/black"
-                android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="First Text" />
 
             <TextView
                 android:id="@+id/titleSecond"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Menu"
+                android:background="#ff0000"
                 android:textColor="@color/text_color"
-                android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="Second Text" />
         </LinearLayout>
-    </RelativeLayout>
+  </RelativeLayout> 
 
     <ListView
         android:id="@+id/listView1"
