--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -12,7 +12,6 @@
             android:id="@+id/imageView1"
             android:layout_width="100dp"
             android:layout_height="65dp"
-            android:background="@drawable/loading"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:scaleType="fitXY" />
@@ -38,5 +37,13 @@
             android:layout_marginRight="8dp"
             android:scaleType="fitXY"
             android:src="@drawable/arrow" />
+
+        <ProgressBar
+            android:id="@+id/imageProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true" />
+
     </RelativeLayout>
 </LinearLayout>
