--- a/oishii/OiSHii/res/layout/specialoffers.xml
+++ b/oishii/OiSHii/res/layout/specialoffers.xml
@@ -8,7 +8,9 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="15dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp">
 
         <TextView
             android:id="@+id/offerTitle"
@@ -16,7 +18,7 @@
             android:layout_height="wrap_content"
             android:text="offer title"
             android:textColor="@android:color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -25,7 +27,7 @@
             android:layout_height="wrap_content"
             android:text="offer title"
             android:textColor="@android:color/black"
-            android:textSize="15sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
     </LinearLayout>
 
