--- a/oishii/OiSHii/res/layout/progressdialog.xml
+++ b/oishii/OiSHii/res/layout/progressdialog.xml
@@ -6,18 +6,18 @@
     <ProgressBar
         android:id="@+id/progressBar1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:layout_margin="15dp"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" 
-        android:layout_marginLeft="10dp"
-         android:layout_marginRight="10dp"
         android:layout_gravity="center"
-        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="15dp"
+        android:textColor="@android:color/white"
         android:textSize="15sp"
-        android:textColor="@android:color/white"/>
+        android:textStyle="bold" />
+
 </LinearLayout>
