--- a/oishii/OiSHii/res/layout/oishiibase.xml
+++ b/oishii/OiSHii/res/layout/oishiibase.xml
@@ -4,13 +4,14 @@
     android:layout_height="fill_parent"
     android:background="#808080" >
 
-    <RelativeLayout
-        android:layout_below="@+id/header"
+<RelativeLayout
         android:id="@+id/contentArea"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_above="@+id/footer"
-        android:background="@color/screen_bg_color" >
+        android:layout_marginTop="42dip"
+        android:background="@color/screen_bg_color"
+       >
     </RelativeLayout>
 
     <include
@@ -24,5 +25,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         layout="@layout/footer" />
+
 
 </RelativeLayout>
