--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -3,10 +3,10 @@
     android:layout_height="65dp" >
     <RelativeLayout
         android:id="@+id/bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="65dp"
         android:orientation="horizontal" 
-        android:background="#00AEEF">
+        >
 
         <ImageView
             android:id="@+id/imageView1"
