--- a/oishii/OiSHii/res/layout/header.xml
+++ b/oishii/OiSHii/res/layout/header.xml
@@ -18,7 +18,8 @@
             android:layout_marginLeft="12dip"
             android:layout_marginRight="12dip"
             android:gravity="center"
-            android:text="header title" />
+            android:text="header title" 
+            />
 
         <ImageView
             android:id="@+id/logo"
