--- a/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
+++ b/oishii/OiSHii/res/layout/list_todaysmenu_item.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="65dp" >
+    android:layout_height="65dp"
+     >
     <RelativeLayout
         android:id="@+id/bg"
         android:layout_width="fill_parent"
