--- a/oishii/OiSHii/res/layout/my_account_no_signed_in.xml
+++ b/oishii/OiSHii/res/layout/my_account_no_signed_in.xml
@@ -1,8 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:gravity="center"
     android:orientation="vertical"
-    android:gravity="center" >
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/signtocontinue"
+        android:textColor="@color/text_color"
+        style="@style/buttonShadow"
+        android:textSize="17sp" />
 
     <Button
         android:id="@+id/button1"
