--- a/oishii/OiSHii/res/layout/specialoffers.xml
+++ b/oishii/OiSHii/res/layout/specialoffers.xml
@@ -7,19 +7,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="15dp"
-        android:orientation="vertical"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/offerTitle"
+            style="@style/todaysmenu_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="offer title"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/offerDesc"
