--- a/oishii/OiSHii/res/drawable/stroke_border.xml
+++ b/oishii/OiSHii/res/drawable/stroke_border.xml
@@ -7,11 +7,11 @@
 
     <corners android:radius="5dp" />
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#F7F7F7" />
 
     <stroke
         android:width="1dp"
-        android:color="#999999" />
+        android:color="#ABABAB" />
 
     <padding
         android:bottom="0dp"
