--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -43,5 +43,22 @@
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">0.6</item>
     </style>
-    
+
+    <style name="fieldText">
+        <item name="android:textColor">#385487</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">60</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="fieldLabel">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">40</item>
+    </style>
+
 </resources>
