--- a/oishii/OiSHii/res/layout/create_account.xml
+++ b/oishii/OiSHii/res/layout/create_account.xml
@@ -86,10 +86,12 @@
 
                 <TextView
                     style="@style/fieldLabel"
-                    android:text="@string/field_email" />
+                    android:text="@string/field_email"
+                    />
 
                 <EditText
                     android:id="@+id/fld_Email"
+                    android:inputType="textEmailAddress"
                     style="@style/fieldText" />
             </LinearLayout>
 
@@ -108,7 +110,7 @@
                     android:text="@string/field_password" />
 
                 <EditText
-                    android:id="@+id/fld_Email"
+                    android:id="@+id/fld_Password"
                     style="@style/fieldText"
                     android:inputType="textPassword" />
             </LinearLayout>
@@ -117,6 +119,21 @@
                 android:layout_width="fill_parent"
                 android:layout_height="2dp"
                 android:background="@drawable/field_separator" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp" >
+
+                <TextView
+                    style="@style/fieldLabel"
+                    android:text="@string/field_password" />
+
+                <EditText
+                    android:id="@+id/fld_RepPassword"
+                    style="@style/fieldText"
+                    android:inputType="textPassword" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
