--- a/oishii/OiSHii/res/values/styles.xml
+++ b/oishii/OiSHii/res/values/styles.xml
@@ -45,11 +45,14 @@
     </style>
 
     <style name="fieldText">
-        <item name="android:textColor">#385487</item>
+        <item name="android:textColor">@color/text_color</item>
         <item name="android:background">@null</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">60</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:maxLength">60</item>
     </style>
 
     <style name="fieldLabel">
